# 2-n_solitaire

./: .2-n_solitaire.conf  .2-n_solitaire.toml  .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  config.py  constants.py  pyproject.toml  requirements.txt  setup.py  solitaire.py
assets/Jellee-Roman/: OFL-FAQ.txt  OFL.txt
src/: Game.py
twn_solitaire/: config.py  constants.py  game.py  run.py
twn_solitaire/assets/Jellee-Roman/: OFL.txt
twnsol/: __init__.py  config.py  constants.py  game.py
