#  ___  _ __     _____       _ _ _        _
# |__ \| '_ \   / ____|     | (_) |      (_)
#    ) |_| |_| | (___   ___ | |_| |_ __ _ _ _ __ ___
#   / /         \___ \ / _ \| | | __/ _` | | '__/ _ \
#  / /_         ____) | (_) | | | || (_| | | | |  __/
# |____|       |_____/ \___/|_|_|\__\__,_|_|_|  \___|
#

[tool.poetry]
name = "twn-solitaire"
version = "0.2"
description = "Generic version of 2048 Solitaire. Simple, fun and satisfying game."
readme = "README.md"
license = "GNU GPL v3"
authors = ["Tomáš Heger"]
homepage = "https://github.com/geckon/2-n_solitaire"
classifiers=[
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^2.2"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
pycodestyle = "^2.5.0"
pylint = "^2.4.3"

[tool.poetry.scripts]
twn_solitaire = "twn_solitaire.run:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
